wed.html is now the home page. Fixed nav bar on mobile. Updated some styling.

--- a/css/wedding2.css
+++ b/css/wedding2.css
@@ -6,13 +6,20 @@ html{
 
 }
 
-body{
-
+body {
+	width:100%;
 	margin: 0;
 	padding: 0;
 	background: #ffc3a0;
 	font-family: Arial, Helvetica, sans-serif;
 
+}
+
+.container {
+	padding-right:0;
+	padding-left:0;
+	
+	width:100%;
 }
 
 *{
@@ -59,10 +66,12 @@ p a{
 	color: #000051;
 	font-family: 'Arial Narrow', Helvetica, sans-serif;
 	line-height: 18px;
+	text-decoration: underline;
 
 }
 p a:hover{
-	color: #f95a3d;
+	color: #0645AD;
+	text-decoration: underline;
 }
 
 a{
@@ -148,6 +157,9 @@ a{
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
 	color: #ff7f50;  /*Sets the text hover color on navbar*/
 }
+.navbar-header a{
+	color:#ff7f50;
+}
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active >   
  a:hover, .navbar-default .navbar-nav > .active > a:focus {
@@ -179,16 +191,62 @@ a{
      color: #ffc3a0; /*Change active text color here*/
      width: auto;
  }
+
+  .navbar-default .navbar-header > a:hover {
+     background-color: #000051; /*Change active text color here*/
+     color: #f95a3d; /*Change active text color here*/
+     width: auto;
+ }
+ .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand > a {
+     background-color: #000051; /*Change active text color here*/
+     width: auto;
+     margin-left: 0px;
+     font-size:14px;
+ }
+
+ #container{
+    position: relative;
+}
  
  .navbar {
-     background-color: #000051; /*Change active text color here*/
-     color: #000051; /*Change active text color here*/
+ 	text-align: left;
+ 	position: absolute;
+ 	width:auto;
+    background-color: #000051; /*Change active text color here*/
+    color: #000051; /*Change active text color here*/
  }
  #navbar {
  	width: auto;
  	background-color: #000051;
 
  }
+ .navbar-header{
+ 	width: auto;
+ 	color:#ffc3a0;
+ 	background-color: #000051;
+
+ }
+
+  .navbar-default .navbar-brand a{
+ 	width: auto;
+ 	color: blue;
+ 	background-color: white;
+
+ }
+
+ .container .#navbar{
+ 	width: auto;
+ 	color:#ffc3a0;
+ 	background-color: #000051;
+
+ }
+
+ .navbar-default .navbar-brand {
+ 	color: #ffc3a0;
+ 	background-color: #000051;
+ }
+
+ 
  .thumbnails img {
 		height: 80px;
 		width: 80px;
